--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       href="https://fonts.googleapis.com/css2?family=Alegreya+SC&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Fashionable</title>
   </head>
   <body>
     <div class="container">
